apply plugin: 'com.android.application'
apply plugin: 'io.fabric'
apply plugin: 'me.tatarka.retrolambda'

android {
  compileSdkVersion 25
  buildToolsVersion "25.0.0"
  defaultConfig {
    applicationId "mobi.mateam.alarma"
    minSdkVersion 17
    targetSdkVersion 25
    versionCode 1
    versionName "1.0"
    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
  }
  buildTypes {
    release {
      minifyEnabled false
      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
    }
  }
  packagingOptions {
    exclude 'META-INF/DEPENDENCIES'
    exclude 'META-INF/NOTICE'
    exclude 'META-INF/LICENSE'
    exclude 'META-INF/LICENSE.txt'
    exclude 'META-INF/NOTICE.txt'
    exclude 'META-INF/rxjava.properties'
  }

  dataBinding {
    enabled true
  }
  compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
  }
}

repositories {
  maven { url 'https://maven.fabric.io/public' }
  maven { url "https://jitpack.io" }
}
buildscript {
  repositories {
    mavenCentral()
    maven { url 'https://maven.fabric.io/public' }
  }
  dependencies {
    classpath 'me.tatarka:gradle-retrolambda:3.5.0'
    classpath 'io.fabric.tools:gradle:1.+'
  }
}

ext {
  supportLibraryVersion = '25.2.0'
  playServicesVersion = '10.2.0'
}


// Apply plugin

dependencies {
  compile fileTree(dir: 'libs', include: ['*.jar'])
  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
    exclude group: 'com.android.support', module: 'support-annotations'
  })

  compile "com.google.android.gms:play-services-places:$playServicesVersion"
  compile "com.android.support:appcompat-v7:$supportLibraryVersion"
  compile "com.android.support:design:$supportLibraryVersion"
  compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
  compile "com.android.support:cardview-v7:$supportLibraryVersion"
  compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
    transitive = true;
  }
  compile 'com.google.code.gson:gson:2.8.0'
  compile 'com.jakewharton.timber:timber:4.5.1'
  compile 'com.squareup.retrofit2:retrofit:2.2.0'
  compile 'com.squareup.retrofit2:converter-gson:2.1.0'
  compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
  compile 'io.reactivex:rxandroid:1.2.1'
  compile 'io.reactivex:rxjava:1.1.6'
  compile 'com.squareup.okhttp3:okhttp:3.6.0'
  compile 'com.google.dagger:dagger:2.9'
  compile 'com.jakewharton:butterknife:8.5.1'
  compile 'com.evernote:android-job:1.1.7'
  compile 'com.android.support.constraint:constraint-layout:1.0.0'
  compile 'com.android.support:support-v4:25.2.0'
  compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
  compile 'com.github.bumptech.glide:glide:3.7.0'
  testCompile 'junit:junit:4.12'
  testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
  annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
  annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
  provided 'org.glassfish:javax.annotation:10.0-b28'
  provided 'javax.annotation:jsr250-api:1.0'
  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
}

apply plugin: 'com.google.gms.google-services'